# clear-hash

./: .dockerignore  .gitignore  .vercelignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  JOURNAL.md  README.md  ROADMAP.md  fly.toml  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: clearhash.rs
assets/: demo-inspect.cast  demo-verify.cast
crates/clearhash-cli/: Cargo.toml
crates/clearhash-cli/src/: main.rs
crates/clearhash-core/: Cargo.toml
crates/clearhash-core/src/: lib.rs  tree.rs
crates/clearhash-ecosystems/: Cargo.toml
crates/clearhash-ecosystems/src/: cargo.rs  lib.rs  npm.rs  pypi.rs
crates/clearhash-provenance/: Cargo.toml
crates/clearhash-provenance/src/: lib.rs
crates/clearhash-registry/: Cargo.toml
crates/clearhash-registry/src/: lib.rs
crates/clearhash-sandbox/: Cargo.toml
crates/clearhash-sandbox/src/: lib.rs  simulate_tamper.rs
crates/clearhash-web/: Cargo.toml
crates/clearhash-web/src/: lib.rs  main.rs  templates.rs
