[package]
name = "clearhash-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared types for the ClearHash supply-chain verifier."

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
