[package]
name = "clearhash-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Fetches package artifacts and SLSA attestation bundles for ClearHash."

[dependencies]
clearhash-core = { workspace = true }
clearhash-ecosystems = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Local HTTP mock server so fetch()/resolve_latest_version can be exercised
# (success, 404 -> None attestation, BadStatus) without hitting a real registry.
wiremock = "0.6"
